# product_inventory

./: README.md  main.py  pyproject.toml
product_inventory/: inventory.py  product.py
tests/: fixtures.py  test_inventory.py  test_product.py
