[tool.poetry]
name = "product-inventory"
version = "0.1.0"
description = ""
authors = ["Logan Cox <mail@logan-cox.com>"]
readme = "README.md"
packages = [{include = "product_inventory"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
